Bug 1805625 - BindAttribLocation on the correct attrib name. r=gfx-reviewers,lsalzman

This changed a while back, and though it should default to 0 anyway,
it's best to do the right thing here.

Differential Revision: https://phabricator.services.mozilla.com/D174188